[package]
name = "mpressed"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
mpris = "2.0.1"
ratatui = { version = "0.28.1", features = ["crossterm"] }
rusqlite = "0.32.1"
strum = "0.26.3"

[[bin]]
name = "daemon"
path = "src/daemon/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"
