[package]
name = "mpressed"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
mpris = "2.0.1"
ratatui = { version = "0.28.1", features = ["crossterm"] }
rusqlite = "0.32.1"
strum = "0.26.3"
log = "0.4.22"
env_logger = "0.11.5"

[[bin]]
name = "daemon"
path = "src/daemon/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"
